# batching-rs

./: Cargo.toml  IMPLEMENTATION_PLAN.md  dependency_graph.txt  implementation_prs.json
examples/: load_gguf.rs
src/: config.rs  gguf.rs  kv_cache.rs  lib.rs  model.rs  scheduler.rs  sequence.rs  tokenizer.rs  worker.rs
tests/: README_REAL_TESTS.md  integration_tests.rs  real_model_tests.rs
