[package]
name = "batching-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokenizers = "0.20"  # HuggingFace tokenizers for Llama
chrono = "0.4"  # For date formatting in chat templates

# MLX for actual model implementation
mlx-rs = { version = "0.25", optional = true }
serde_json = "1.0.149"

[dev-dependencies]
# For integration tests with real models
reqwest = { version = "0.12", features = ["blocking"] }  # For downloading models
tempfile = "3.0"  # For temporary model storage

[features]
default = []
mlx = ["mlx-rs"]
# Feature flag for integration tests with real tokenizers
# Run with: cargo test --features real-models
# Note: Full MLX support requires macOS SDK >= 14.0
real-models = []  # Removed mlx dependency for now
real-models-mlx = ["mlx", "real-models"]  # Future: when SDK is updated
